Make Deploy*Fearless.java properly source-launchable
They called BaseCacheBuilder.deployInto(...) directly, and BaseCacheBuilder
imports coordinator.Coordinator/core.* to actually run the Fearless
compiler and build "base" - a real, inherent dependency on all of
Coordinator/src (and Frontend/src under it) being resolvable, not
something -sourcepath's on-demand discovery could reliably bridge from
test/mainCoordinator (it stalled on same-package siblings partway through
a large, cross-referencing package).

Fixed by giving BaseCacheBuilder its own main(String[]) entry point and
having ModularBuild.deployBaseCache(appRoot) launch it in a child JVM
(via Commons' JavaTool.runMain, already exactly the right tool for this)
against ModularBuild's own properly-compiled coordinator-test output,
instead of calling it in-process. Deploy*Fearless.java now only ever
reference tools.PortableApp and sibling ModularBuild methods - both
resolvable from just Commons.jar - so they run via the same uniform
--module-path invocation as the other three programs. See
development-guide.txt.

ModularBuild.runJUnit is rewritten on top of JavaTool.runMain too, for
the same reason: reuse the tested child-JVM-launching code already in
Commons instead of bespoke ProcessBuilder logic.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0179P3MyZ1a7hrgsJvjtJD6E