@@ -1,9 +1,11 @@
+// Builds fearlessManaged, a runnable app-image of the Fearless project manager GUI, real JPMS modules. See development-guide.txt. Run from Coordinator/test:
+//   java --module-path ../../Commons/Commons.jar --add-modules Commons mainCoordinator/DeployManagedFearless.java
 package mainCoordinator;
 
 import tools.PortableApp;
 
 public class DeployManagedFearless{
-  public static void main(String[] a){
+  public static void main(String[] a) throws Exception{
     new PortableApp(
       ResolveResource.packaging,
       ResolveResource.managedFolderOut,//out
@@ -19,6 +21,9 @@ public class DeployManagedFearless{
       ResolveResource.versionId,
       "Coordinator/manager.ManagerMain"
     ).build();
-    BaseCacheBuilder.deployInto(ResolveResource.managedFolderOut.resolve("fearlessManaged"+ResolveResource.versionId));
+    ModularBuild.commons();
+    ModularBuild.frontendMain();
+    ModularBuild.coordinatorTest();
+    ModularBuild.deployBaseCache(ResolveResource.managedFolderOut.resolve("fearlessManaged"+ResolveResource.versionId));
   }
 }
